# treetop

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  LICENSE  README.md  conan_profile_emscripten  conanfile.txt  index.data  index.html  index.js  index.wasm  shell.html
src/: main.cpp
src/app/: colors.h  config.h  drawing.cpp  drawing.h  guppy_r_hq.h  transforms.h
src/core/: constants.h  dynamics.h  loss.cpp  loss.h  obstacle.h  policy.h  problem.h  rng.h  rollout.h  scenario.cpp  scenario.h  search_space.h  smooth_functions.h  space.h  trajectory.h  util.h
src/ilqr/: backward_pass.h  solver.h  solver_settings.h
src/planner/: planner.h
src/tree/: node.h  sampling.h  steer.h  thread_pool.h  tree.h
